<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Login.Login">


    <include layout="@layout/toolbar_title"
        android:id="@+id/toolbar"/>

    <TextView
        android:id="@+id/textView_CaptionInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:fontFamily="@font/poppins_light"
        android:padding="4dp"
        android:text="@string/activity_login_header"
        android:textAlignment="center"
        android:textSize="36sp"
        android:textStyle="bold" />
    <View
        android:id="@+id/divider_login_1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:background="?android:attr/listDivider" />


    <LinearLayout
        android:layout_margin="100dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="16dp">


        <EditText
            android:id="@+id/username"
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_user"
            android:ems="10"
            android:importantForAutofill="no"
            android:fontFamily="@font/poppins_light"
            android:hint="@string/activity_login_username"
            android:inputType="textPersonName"
            android:textCursorDrawable="@null"/>

        <EditText
            android:id="@+id/password"
            android:layout_width="400dp"
            android:layout_height="wrap_content"
            android:drawableEnd="@drawable/ic_password"
            android:ems="10"
            android:importantForAutofill="no"
            android:fontFamily="@font/poppins_light"
            android:hint="@string/activity_login_password"
            android:inputType="textPassword"
            android:textCursorDrawable="@null"/>

        <ProgressBar
            android:id="@+id/progress"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:indeterminateTint="@color/colorPrimary"
            android:visibility="gone"
            tools:visibility="visible" />

        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/colorPrimary"
            android:padding="4dp"
            android:text="@string/activity_login_loginButton"
            android:textColor="@color/colorAccent" />
    </LinearLayout>
</LinearLayout>